# ddic

./: .gitignore  CMakeLists.txt  COPYING  Doxyfile.in  README.md  biicode.cmake  biicode.conf
contrib/: CMakeLists.txt
contrib/gmock/: CMakeLists.txt
contrib/gtest/: CMakeLists.txt
src/: CMakeLists.txt  ddic.hxx  ddic_config.hxx.in  ddic_container.cxx  ddic_container.hxx  ddic_creation_policy.hxx  ddic_factory.hxx  ddic_plugin.hxx  ddic_register_proxy.cxx  ddic_register_proxy.hxx
tests/: CMakeLists.txt  binary_expression.cxx  binary_expression.hxx  container.cxx  default_factory.cxx  functor_factory.cxx  main.cxx  prototype_factory.cxx
